--- a/primary_particle_generator/Makefile
+++ b/primary_particle_generator/Makefile
@@ -1,11 +1,16 @@
-all: generatePrimaryParticleData_20 generatePrimaryParticleData
+#all: generatePrimaryParticleData_01826
+all: generatePrimaryParticleData
 
 generatePrimaryParticleData:
-	g++ generatePrimaryParticleData.cpp -o generatePrimaryParticleData -I/opt/clhep/clhep_2.1.0.1/include/ -L/opt/clhep/clhep_2.1.0.1/lib/ -lCLHEP -Wall
+	g++ generatePrimaryParticleData.cpp \
+		-o generatePrimaryParticleData \
+		$(shell root-config --cflags --libs) -Wall
 
-generatePrimaryParticleData_20:
-	g++ generatePrimaryParticleData_20.cpp -o generatePrimaryParticleData_20 -I/opt/clhep/clhep_2.1.0.1/include/ -L/opt/clhep/clhep_2.1.0.1/lib/ -lCLHEP -Wall
+generatePrimaryParticleData_01826:
+	g++ generatePrimaryParticleData_01826.cpp \
+		-o generatePrimaryParticleData_01826 \
+		$(shell root-config --cflags --libs) -Wall
 
 clean:
-	rm generatePrimaryParticleData_20
+	rm generatePrimaryParticleData_01826
 	rm generatePrimaryParticleData
