--- a/primary_particle_generator/Makefile_template
+++ b/primary_particle_generator/Makefile_template
@@ -1,10 +1,15 @@
-all: generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY generatePrimaryParticleData
+all: generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY
+#all: generatePrimaryParticleData
 
 generatePrimaryParticleData:
-	g++ generatePrimaryParticleData.cpp -o generatePrimaryParticleData -I/opt/clhep/clhep_2.1.0.1/include/ -L/opt/clhep/clhep_2.1.0.1/lib/ -lCLHEP -Wall
+	g++ generatePrimaryParticleData.cpp \
+		-o generatePrimaryParticleData \
+		$(shell root-config --cflags --libs) -Wall
 
 generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY:
-	g++ generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY.cpp -o generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY -I/opt/clhep/clhep_2.1.0.1/include/ -L/opt/clhep/clhep_2.1.0.1/lib/ -lCLHEP -Wall
+	g++ generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY.cpp \
+		-o generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY \
+		$(shell root-config --cflags --libs) -Wall
 
 clean:
 	rm generatePrimaryParticleData_VARIABLE_NEUTRINO_ENERGY
